Revision history for WWW-Scraper-ISBN-ORA_Driver
================================================

        - added git repository links to metadata.

0.20    2013-03-17
        - added isbn-check.pl to examples.
        - change file dates changed to meet W3CDTF standards.
        - META updates.
        - updated test suite.

0.19    2012-05-27
        - updated pattern matching due to page layout changes.
        - spelling fixes. (thanks to Florian Schlichting & Gregor Herrmann).
        - META tests no longer require specific versions.
        - added minimum perl version (5.006).
        - reworked Makefile.PL for clarity.

0.18    2010-10-29
        - added further skip test if test books are withdrawn from the site.
        - fixed skip test count.

0.17    2010-10-07
        - amended pingtest() in network tests.

0.16    2010-10-06
        - fixed skip count.
        - provided alternate ping test methods.

0.15    2010-09-15
        - reworked test structure, so easier to add sample sets.

0.14    2010-08-10
        - added better protection from network failures.
        - updated prerequisite requirements.

0.13    2010-08-02
        - added connection protection if client or server offline.
        - documentation updates.

0.12    2010-07-30
        - added fields (if known) for binding, pages, weight, width & height.
        - added ean13, which is the industry name for isbn-13.
        - more tests.
        - removal of Template::Extract in favour of plain regexes.
        - various package file changes (inc adding META.json).

0.11    2009-11-01
        - alternative method used to extract data from book page.
        - 10 character ISBN no longer supported, EAN13 now used as the values
          for the 'isbn' and 'ean' fields, with both the 'isbn10' and 'isbn13'
          fields now obsolete.
        - specified minimum version of WWW::Mechanize in order to ensure we
          use a more recent version of HTML::Form in LWP.

0.10    2009-08-14