@@ -12,8 +12,8 @@ installdirs:            site
 requires:
   perl:                         5.006
   WWW::Mechanize:               1.60
-  WWW::Scraper::ISBN:           0.25
-  WWW::Scraper::ISBN::Driver:   0.18
+  WWW::Scraper::ISBN:           1.00
+  WWW::Scraper::ISBN::Driver:   1.00
 recommends:
   Test::CPAN::Meta:             0
   Test::CPAN::Meta::JSON:       0
