@@ -8,7 +8,7 @@ use ExtUtils::MakeMaker;
 
 WriteMakefile(
     AUTHOR              => 'Barbie <barbie@cpan.org>',
-    NAME                => 'WWW::Scraper::ISBN::ORA_Driver',
+    NAME                => 'WWW-Scraper-ISBN-ORA_Driver',
     VERSION_FROM        => 'lib/WWW/Scraper/ISBN/ORA_Driver.pm',
     ABSTRACT            => q|Search driver for the O'Reilly & Associates' online catalog|,
     NO_META             => 1,
@@ -16,8 +16,8 @@ WriteMakefile(
 
         # prereqs
         'WWW::Mechanize'                => '1.60',
-        'WWW::Scraper::ISBN'            => '0.25',
-        'WWW::Scraper::ISBN::Driver'    => '0.18',
+        'WWW::Scraper::ISBN'            => '1.00',
+        'WWW::Scraper::ISBN::Driver'    => '1.00',
 
         # build/test prereqs
         'Data::Dumper'                  => '0',
